# joyid-lib-demo

./: .gitmodules  Cargo.toml  Makefile  README.md  capsule.toml  deployment.toml  rust-toolchain
.github/workflows/: rust.yml
ckb-lib-joyid/: Cargo.toml  build.rs
ckb-lib-joyid/src/: code_hashes.rs  lib.rs  libjoyid.rs
contracts/c/: Makefile
contracts/c/src/: joyid-demo.c
contracts/joyid-lib-demo/: Cargo.toml
contracts/joyid-lib-demo/src/: entry.rs  error.rs  main.rs
docs/: protocol.md
tests/: Cargo.toml
tests/src/: helper.rs  lib.rs  native_c_tests.rs  native_tests.rs  subkey_tests.rs  tests.rs
